// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Link should render with the dropCap link not underlined 1`] = `
<Link
  target="target"
  underlined={false}
  url="www.example.com"
>
  A
</Link>
`;

exports[`Article Link should render with the link underlined 1`] = `
<Link
  target="target"
  underlined={true}
  url="www.example.com"
>
  a link
</Link>
`;
